# quetzalcoatl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  code_of_conduct.md  crash.txt
Controller/: CMakeLists.txt  Controller_global.h  abstractitem.cpp  abstractitem.h  connectionstate.h  controller.cpp  controller.h  dbitem.cpp  dbitem.h  item.cpp  item.h  itemmodelcontroller.cpp  itemmodelcontroller.h  items.cpp  items.h  songitem.cpp  songitem.h  tagitem.cpp  tagitem.h  timeFormat.cpp  timeFormat.h
app/: CMakeLists.txt  configurationdialog.cpp  configurationdialog.h  connectiondialog.cpp  connectiondialog.h  databasemodel.cpp  databasemodel.h  icons.qrc  item.cpp  item.h  itemmodel.cpp  itemmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  playbacksettingsdialog.cpp  playbacksettingsdialog.h  playlistdelegate.cpp  playlistdelegate.h  playlistmodel.cpp  playlistmodel.h  playlistvalidator.cpp  playlistvalidator.h  resources.qrc  saveplaylistdialog.cpp  saveplaylistdialog.h
app/icons/breeze-dark/: index.theme
controller/: CMakeLists.txt  abstractsongitem.cpp  abstractsongitem.h  albumitem.cpp  albumitem.h  albumsitem.cpp  albumsitem.h  albumsongitem.cpp  albumsongitem.h  allsongitem.cpp  allsongitem.h  artistalbumitem.cpp  artistalbumitem.h  artistitem.cpp  artistitem.h  artistsitem.cpp  artistsitem.h  artistsongsitem.cpp  artistsongsitem.h  compilationartistalbumitem.cpp  compilationartistalbumitem.h  compilationartistitem.cpp  compilationartistitem.h  compilationsitem.cpp  compilationsitem.h  composeralbumitem.cpp  composeralbumitem.h  composeritem.cpp  composeritem.h  composersitem.cpp  composersitem.h  composersongsitem.cpp  composersongsitem.h  connectionstate.h  controller.cpp  controller.h  databasemodel.cpp  databasemodel.h  dbitem.cpp  dbitem.h  (+63 more)
itemmodels/: CMakeLists.txt  albumsitem.h  item.cpp  item.h  itemmodel.cpp  itemmodel.h
models/: CMakeLists.txt
mpdclient/: CMakeLists.txt  README.md  connection.cpp  connection.h  entitysong.cpp  entitysong.h  isong.h  playlist.cpp  playlist.h  song.cpp  song.h
tests/: CMakeLists.txt  mpdprocess.cpp  mpdprocess.h  tst_testTimeFormat.cpp  tst_testconnection.cpp  tst_testcontroller.cpp  tst_testtimeformat.cpp
tests/resources/: mpd.conf
